--- a/src/xbuild/EnvironmentalAppDialog.form
+++ b/src/xbuild/EnvironmentalAppDialog.form
@@ -25,48 +25,42 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="jXLabel5" min="-2" max="-2" attributes="0"/>
+                  <Component id="jXLabel4" min="-2" max="-2" attributes="0"/>
+                  <Component id="jXLabel3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jXLabel2" min="-2" max="-2" attributes="0"/>
+                  <Component id="jXLabel1" min="-2" max="-2" attributes="0"/>
+                  <Component id="jXLabel6" min="-2" max="-2" attributes="0"/>
+                  <Component id="jXLabel7" min="-2" max="-2" attributes="0"/>
+                  <Component id="jXLabel8" min="-2" max="-2" attributes="0"/>
+                  <Component id="jXLabel9" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="spDaylength" max="32767" attributes="0"/>
+                  <Component id="cbDaylengthFactor" alignment="0" pref="184" max="32767" attributes="1"/>
+                  <Component id="cbRadiationFactor" alignment="0" max="32767" attributes="1"/>
+                  <Component id="txtMaxTemp" alignment="0" max="32767" attributes="0"/>
+                  <Component id="cbMaxTempFactor" alignment="0" max="32767" attributes="1"/>
+                  <Component id="txtMinTemp" alignment="0" max="32767" attributes="0"/>
+                  <Component id="cbMinTempFactor" alignment="0" max="32767" attributes="1"/>
+                  <Component id="txtPrecipitation" alignment="0" max="32767" attributes="0"/>
+                  <Component id="cbPrecipitationFactor" alignment="0" max="32767" attributes="1"/>
+                  <Component id="txtCo2" alignment="0" max="32767" attributes="0"/>
+                  <Component id="cbCo2Factor" alignment="0" max="32767" attributes="1"/>
+                  <Component id="txtHumidity" alignment="0" max="32767" attributes="0"/>
+                  <Component id="cbHumidityFactor" alignment="0" max="32767" attributes="1"/>
+                  <Component id="txtWind" alignment="0" max="32767" attributes="0"/>
+                  <Component id="cbWindFactor" alignment="0" max="32767" attributes="1"/>
                   <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="jXLabel5" min="-2" max="-2" attributes="0"/>
-                          <Component id="jXLabel4" min="-2" max="-2" attributes="0"/>
-                          <Component id="jXLabel3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jXLabel2" min="-2" max="-2" attributes="0"/>
-                          <Component id="jXLabel1" min="-2" max="-2" attributes="0"/>
-                          <Component id="jXLabel6" min="-2" max="-2" attributes="0"/>
-                          <Component id="jXLabel7" min="-2" max="-2" attributes="0"/>
-                          <Component id="jXLabel8" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="spDaylength" pref="163" max="32767" attributes="0"/>
-                          <Component id="cbDaylengthFactor" alignment="0" pref="163" max="32767" attributes="1"/>
-                          <Component id="cbRadiationFactor" alignment="0" pref="163" max="32767" attributes="1"/>
-                          <Component id="txtMaxTemp" alignment="0" pref="163" max="32767" attributes="0"/>
-                          <Component id="cbMaxTempFactor" alignment="0" pref="163" max="32767" attributes="1"/>
-                          <Component id="txtMinTemp" alignment="0" pref="163" max="32767" attributes="0"/>
-                          <Component id="cbMinTempFactor" alignment="0" pref="163" max="32767" attributes="1"/>
-                          <Component id="txtPrecipitation" alignment="0" pref="163" max="32767" attributes="0"/>
-                          <Component id="cbPrecipitationFactor" alignment="0" pref="163" max="32767" attributes="1"/>
-                          <Component id="txtCo2" alignment="0" pref="163" max="32767" attributes="0"/>
-                          <Component id="cbCo2Factor" alignment="0" pref="163" max="32767" attributes="1"/>
-                          <Component id="txtHumidity" alignment="0" pref="163" max="32767" attributes="0"/>
-                          <Component id="cbHumidityFactor" alignment="0" pref="163" max="32767" attributes="1"/>
-                          <Component id="txtWind" alignment="0" pref="163" max="32767" attributes="0"/>
-                          <Component id="cbWindFactor" alignment="0" pref="163" max="32767" attributes="1"/>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="bnCancel" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Component id="txtRadiation" alignment="0" pref="163" max="32767" attributes="0"/>
-                      </Group>
+                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="bnCancel" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="1" attributes="0">
-                      <Component id="jXLabel9" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="dpDate" min="-2" pref="164" max="-2" attributes="1"/>
-                  </Group>
+                  <Component id="txtRadiation" alignment="0" max="32767" attributes="0"/>
+                  <Component id="dpDate" alignment="1" max="32767" attributes="1"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -78,8 +72,9 @@
                   <Component id="jXLabel15" min="-2" max="-2" attributes="0"/>
                   <Component id="jXLabel16" min="-2" max="-2" attributes="0"/>
                   <Component id="jXLabel17" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -87,9 +82,12 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="dpDate" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jXLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="dpDate" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jXLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="jLabel1" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -169,7 +167,7 @@
     <Component class="org.jdesktop.swingx.JXDatePicker" name="dpDate">
       <Properties>
         <Property name="formats" type="[Ljava.text.DateFormat;" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new SimpleDateFormat(&quot;dd/MM/yyyy&quot;, new Locale(&quot;en&quot;,&quot;US&quot;))" type="code"/>
+          <Connection code="Variables.getDateFormat()" type="code"/>
         </Property>
       </Properties>
     </Component>
@@ -380,6 +378,13 @@
       <Properties>
         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
           <Format format="#0.0" subtype="-1" type="0"/>
+        </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel1">
+      <Properties>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="Variables.getDateFormatString()" type="code"/>
         </Property>
       </Properties>
     </Component>
