--- a/src/xbuild/InitialConditionFrame.form
+++ b/src/xbuild/InitialConditionFrame.form
@@ -81,6 +81,8 @@
                                       <Component id="jXLabel1" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="dpICDAT" min="-2" pref="184" max="-2" attributes="0"/>
+                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                      <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <Component id="jXPanel3" alignment="0" min="-2" max="-2" attributes="1"/>
                               </Group>
@@ -108,6 +110,7 @@
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jXLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="dpICDAT" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
                               <Component id="jXPanel3" min="-2" max="-2" attributes="0"/>
@@ -524,7 +527,7 @@
             <Component class="xbuild.Components.XDatePicker" name="dpICDAT">
               <Properties>
                 <Property name="formats" type="[Ljava.text.DateFormat;" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="new SimpleDateFormat(&quot;dd/MM/yyyy&quot;, new Locale(&quot;en&quot;,&quot;US&quot;))" type="code"/>
+                  <Connection code="Variables.getDateFormat()" type="code"/>
                 </Property>
               </Properties>
               <Events>
@@ -604,6 +607,13 @@
                 </Property>
               </Properties>
             </Component>
+            <Component class="javax.swing.JLabel" name="jLabel6">
+              <Properties>
+                <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="Variables.getDateFormatString()" type="code"/>
+                </Property>
+              </Properties>
+            </Component>
           </SubComponents>
         </Container>
         <Container class="org.jdesktop.swingx.JXPanel" name="jXPanel2">
@@ -628,7 +638,11 @@
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="dpProfileDate" min="-2" pref="184" max="-2" attributes="0"/>
+                                  <Group type="102" attributes="0">
+                                      <Component id="dpProfileDate" min="-2" pref="184" max="-2" attributes="0"/>
+                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                      <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+                                  </Group>
                                   <Component id="cbSoil" min="-2" pref="515" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -666,6 +680,7 @@
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="dpProfileDate" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
@@ -771,7 +786,7 @@
             <Component class="xbuild.Components.XDatePicker" name="dpProfileDate">
               <Properties>
                 <Property name="formats" type="[Ljava.text.DateFormat;" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="new SimpleDateFormat(&quot;dd/MM/yyyy&quot;, new Locale(&quot;en&quot;,&quot;US&quot;))" type="code"/>
+                  <Connection code="Variables.getDateFormat()" type="code"/>
                 </Property>
               </Properties>
               <Events>
@@ -890,6 +905,13 @@
               </SubComponents>
             </Container>
             <Component class="xbuild.Components.XComboBox" name="cbSoil">
+            </Component>
+            <Component class="javax.swing.JLabel" name="jLabel5">
+              <Properties>
+                <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="Variables.getDateFormatString()" type="code"/>
+                </Property>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
