--- a/src/xbuild/HarvestDialog.form
+++ b/src/xbuild/HarvestDialog.form
@@ -67,7 +67,11 @@
                       <Component id="bnHSTG" min="-2" pref="22" max="-2" attributes="0"/>
                   </Group>
                   <Component id="txtHDATE" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
-                  <Component id="dpHDATE" alignment="0" min="-2" pref="117" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="dpHDATE" min="-2" pref="117" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -85,6 +89,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="lbDate" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="dpHDATE" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -242,6 +247,13 @@
     <Component class="org.jdesktop.swingx.JXLabel" name="jXLabel7">
       <Properties>
         <Property name="text" type="java.lang.String" value="%"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel1">
+      <Properties>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="Variables.getDateFormatString()" type="code"/>
+        </Property>
       </Properties>
     </Component>
   </SubComponents>
