--- a/src/xbuild/MainForm.form
+++ b/src/xbuild/MainForm.form
@@ -204,6 +204,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value=" XB2 v0.1.0.0."/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
